force-app/main/default/objects/Route__c/fields/ADI__c.field-meta.xml
<CustomField>
        <fullName>ADI__c</fullName>
        <label>ADI</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>