force-app/main/default/objects/Route__c/fields/Complaints_Allowed__c.field-meta.xml
<CustomField>
        <fullName>Complaints_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaints Allowed</label>
        <type>Checkbox</type>
    </CustomField>