force-app/main/default/objects/Route__c/fields/District__c.field-meta.xml
<CustomField>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>