force-app/main/default/objects/Route__c/fields/Division__c.field-meta.xml
<CustomField>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>