force-app/main/default/objects/Route__c/fields/Recovery_Allowed__c.field-meta.xml
<CustomField>
        <fullName>Recovery_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recovery Allowed</label>
        <type>Checkbox</type>
    </CustomField>