force-app/main/default/objects/Route__c/fields/Redelivery_Allowed__c.field-meta.xml
<CustomField>
        <fullName>Redelivery_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redelivery Allowed</label>
        <type>Checkbox</type>
    </CustomField>