force-app/main/default/objects/Route__c/fields/Route_Id__c.field-meta.xml
<CustomField>
        <fullName>Route_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Id from DSI used for record matching</description>
        <externalId>true</externalId>
        <label>Route Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>