force-app/main/default/objects/Route__c/fields/Route_Service_Group__c.field-meta.xml
<CustomField>
        <fullName>Route_Service_Group__c</fullName>
        <label>Route Service Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>