force-app/main/default/objects/Route__c/fields/Route_Type__c.field-meta.xml
<CustomField>
        <fullName>Route_Type__c</fullName>
        <label>Route Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>