force-app/main/default/objects/Route__c/fields/Samples_Allowed__c.field-meta.xml
<CustomField>
        <fullName>Samples_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Samples Allowed</label>
        <type>Checkbox</type>
    </CustomField>