force-app/main/default/objects/Route__c/fields/Sub_District__c.field-meta.xml
<CustomField>
        <fullName>Sub_District__c</fullName>
        <label>Sub-District</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>