force-app/main/default/objects/Route__c/fields/Valid_From__c.field-meta.xml
<CustomField>
        <fullName>Valid_From__c</fullName>
        <description>Date which this route is first able to be used</description>
        <label>Valid From</label>
        <type>Date</type>
    </CustomField>