force-app/main/default/objects/Route__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
        <fullName>Valid_Until__c</fullName>
        <description>Last date this route will be making deliveries.</description>
        <label>Valid Until</label>
        <type>Date</type>
    </CustomField>