force-app/main/default/objects/Route__c/listViews/All_w_Detail.listView-meta.xml
<ListView>
        <fullName>All_w_Detail</fullName>
        <columns>NAME</columns>
        <columns>District__c</columns>
        <columns>Route_Id__c</columns>
        <columns>Division__c</columns>
        <columns>Route_Type__c</columns>
        <columns>Sub_District__c</columns>
        <filterScope>Everything</filterScope>
        <label>All w/ Detail</label>
    </ListView>